--- a/Homestead.yaml.example
+++ b/Homestead.yaml.example
@@ -2,20 +2,20 @@
 ip: "192.168.10.10"
 memory: 2048
 cpus: 1
+provider: virtualbox
 
-authorize: ~/.ssh/id_dsa.pub
+authorize: ~/.ssh/id_rsa.pub
 
 keys:
-    - ~/.ssh/id_dsa
+    - ~/.ssh/id_rsa
 
 folders:
-    - map: ~/Code
-      to: /home/vagrant/yoursite.com
-      type: nfs
+    - map: ~/Projects
+      to: /home/vagrant/Projects
 
 sites:
-    - map: yoursite.com.192.168.10.10.xip.io
-      to: /home/vagrant/yoursite.com/public
+    - map: v3.dev
+      to: /home/vagrant/Projects/v3/public
 
 databases:
     - homestead
@@ -23,3 +23,16 @@ databases:
 variables:
     - key: APP_ENV
       value: local
+
+# blackfire:
+#     - id: foo
+#       token: bar
+#       client-id: foo
+#       client-token: bar
+
+# ports:
+#     - send: 93000
+#       to: 9300
+#     - send: 7777
+#       to: 777
+#       protocol: udp
